--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,11 +1,11 @@
-.ChatMain 
-  .GroupInfo
-    .GroupInfo__group
-      .GroupInfo__group-name 
+.Chat
+  .RightHeader
+    .RightHeader__group
+      .RightHeader__group-name 
         test
-      .GroupInfo__member-list 
+      .RightHeader__member-list 
         Member:masa
-    = link_to "#", class: "GroupInfo__edit-button" do
+    = link_to "#", class: "RightHeader__edit-button" do
       Edit
   .ChatMain__message
     .ChatMain__message-box
