--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -45,13 +45,13 @@
     padding: 0 20px;
     &__group {
     padding: 20px 0 40px;
-    .GroupList__group-name {
+    }
+    &__group-name {
       font-size: 15px;
     }
     .GroupList__group-message {
       margin-top: 5px;
       font-size: 11px;
-    }
     }
   }
 }
