--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,8 +4,10 @@
       .LeftHeader__username 
         masa
       .LeftHeader__iconlist 
-        = icon('fas', 'edit', class: "LeftHeader__lefticon")
-        = icon('fas', 'cog', class: "LeftHeader__righticon")
+        = link_to "#", class: "LeftHeader__lefticon" do
+          <i class="fas fa-cog"></i>
+        = link_to "#", class: "LeftHeader__righticon" do
+          <i class="fas fa-edit"></i>
   .GroupList
     .GroupList__group
       .GroupList__group-name 
