--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -4,10 +4,12 @@
 
 .wrapper {
   display: flex;
+}
 
   .SideBar {
     width: 300px;
     color: #ffffff;
+  }
 
     .LeftHeader {
       background-color: #253141;
@@ -21,24 +23,24 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .LeftHeader__username  {
+      }
+        &__username {
           font-size: 16px;
           color: #ffffff;
           font-weight: bold;
         }
-        .LeftHeader__iconlist {
+        &__iconlist {
           display: flex;
           justify-content: end;
-          .LeftHeader__lefticon {
+        }
+        &__lefticon {
             color: #ffffff;
           }
-          .LeftHeader__righticon {
+          &__righticon {
             color: #ffffff;
             margin-left: 5px;
           }
-        }
-      }
-    }
+         }
   .GroupList {
     background-color: #2f3e51;
     height: calc(100vh - 100px);
@@ -49,16 +51,16 @@
     &__group-name {
       font-size: 15px;
     }
-    .GroupList__group-message {
+    &__group-message {
       margin-top: 5px;
       font-size: 11px;
     }
   }
-}
 
 .Chat {
   width: calc(100vw - 300px);
   background-color: #ffffff;
+}
   .RightHeader {
     background-color: #ffffff;
     border-bottom: solid 1px #eeeeee;
@@ -66,18 +68,8 @@
     display: flex;
     justify-content: space-between;
     &__group {
-      .RightHeader__group-name {
-        font-size: 20px;
-        color: #333333;
-        margin-top: 35px;
-      }
-      .RightHeader__member-list {
-        font-size: 12px;
-        color: #999999;
-        margin-top: 15px;
-      }
     }
-    .RightHeader__edit-button {
+    &__edit-button {
       display: block;
       border: 1px solid #38aef0;
       color: #38aef0;
@@ -87,21 +79,32 @@
       padding: 0 20px;
       text-decoration: none;
     }
+      &__group-name {
+        font-size: 20px;
+        color: #333333;
+        margin-top: 35px;
+      }
+      &__member-list {
+        font-size: 12px;
+        color: #999999;
+        margin-top: 15px;
+      }
   }
-  .ChatMain__message {
+  .MessageField {
     background-color: #fafafa;
     height: calc(100vh - 100px - 90px);
     padding: 35px 40px 0;
-    .ChatMain__message-box {
+    .MessageBox {
       margin-bottom: 46px;
-      .ChatMain__message-info{
+    }
+      .MessageInfo {
         display: flex;
-        .ChatMain__message-name {
+        &__user-name {
           color: #333333;
           font-size: 16px;
           font-weight: bold;
         }
-        .ChatMain__message-time {
+        &__date {
           color: #999999;
           font-size: 12px;
           padding-left: 10px;
@@ -109,55 +112,52 @@
       }
       .Message {
         margin-top: 12px;
-        .Message__content {
+        &__content {
           color: #434A54;
           font-size: 14px;
         }
       }
-    }
   }
-  .ChatMain__message-form {
+  .Footer {
     box-sizing: border-box;
     background-color: #d2d2d2;
     height: 90px;
     padding: 20px 50px 20px 40px;
-    .ChatMain__form {
+    .Form {
       display: flex;
       justify-content: space-between;
       width: 100%;
-      .ChatMain__type-message {
-        position: relative;
-        background-color: #ffffff;
+    &__content {
+      position: relative;
+      background-color: #ffffff;
+      width: 100%;
+      }
+      &__input {
+        border: none;
+        height: 50px;
         width: 100%;
-        .ChatMain__input {
-          border: none;
-          height: 50px;
-          width: 100%;
-          padding: 0 45px 0 15px;
+        padding: 0 45px 0 15px;
         }
-        .ChatMain__image {
+        &__image {
           position: absolute;
           height: 50px;
           right: 10px;
-          .Form__icon {
-            line-height: 50px;
-            font-size: 25px;
-          }
-          .Form__hidden{
+        }
+        &__icon {
+          line-height: 50px;
+          font-size: 25px;
+        }
+        &__hidden {
           display: none;
         }
-        }
-      }
-    }
-.Form__submit {
-background-color: #38AEF0;
-border: none;
-color: #fff;
-font-size: 16px;
-height: 50px;
-margin-left: 15px;
-padding: 0 30px;
+    &__submit {
+      background-color: #38AEF0;
+      border: none;
+      color: #fff;
+      font-size: 16px;
+      height: 50px;
+      margin-left: 15px;
+      padding: 0 30px;
+     }
     }
   }
-}
-}
