--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,13 +1,15 @@
 .SideBar
   .LeftHeader
     .LeftHeader__list
-      .LeftHeader__username 
-        masa
-      .LeftHeader__iconlist 
-        = link_to "#", class: "LeftHeader__lefticon" do
-          <i class="fas fa-edit"></i>
-        = link_to "#", class: "LeftHeader__righticon" do
-          <i class="fas fa-cog"></i>
+      .LeftHeader__userName
+        = current_user.name
+      .LeftHeader__iconList
+        .LeftHeader__leftIcon
+          = link_to '#' do
+            = icon('fas', 'edit')
+        .LeftHeader__rightIcon
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog')
   .GroupList
     .GroupList__group
       .GroupList__group-name 
