--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,14 +5,16 @@
         = current_user.name
       .LeftHeader__iconList
         .LeftHeader__leftIcon
-          = link_to '#' do
+          = link_to '/groups/new' do
             = icon('fas', 'edit')
         .LeftHeader__rightIcon
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog')
   .GroupList
-    .GroupList__group
-      .GroupList__group-name 
-        techcamp
-      .GroupList__group-message 
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .GroupList__group
+        = link_to '#' do
+          .GroupList__group-name 
+            = group.name
+          .GroupList__group-message
+            メッセージはまだありません
