--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,20 +1,20 @@
 .SideBar
   .LeftHeader
     .LeftHeader__list
-      %h3.LeftHeader__userName
+      .LeftHeader__userName
         = current_user.name
-      %ul.LeftHeader__iconList
-        %li.LeftHeader__leftIcon
+      .LeftHeader__iconList
+        .LeftHeader__leftIcon
           = link_to '/groups/new' do
             = icon('fas', 'edit')
-        %li.LeftHeader__rightIcon
+        .LeftHeader__rightIcon
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog')
   .GroupList
     - current_user.groups.each do |group|
       .GroupList__group
         = link_to '#' do
-          .GroupList__group-name
+          .GroupList__group-name 
             = group.name
           .GroupList__group-message
             メッセージはまだありません
