create pull request

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -33,10 +33,10 @@
           display: flex;
           justify-content: end;
         }
-        &__leftIcon {
+        &__leftIcon a {
             color: #ffffff;
           }
-          &__rightIcon {
+        &__rightIcon a {
             color: #ffffff;
             margin-left: 5px;
           }
@@ -46,8 +46,12 @@
     height: calc(100vh - 100px);
     padding: 0 20px;
     &__group {
-    padding: 20px 0 40px;
+      padding: 20px 0 40px;
     }
+    &__group a {
+      color: #ffffff;
+      text-decoration: none;
+      }
     &__group-name {
       font-size: 15px;
     }
