--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -102,7 +102,7 @@
     }
       .MessageInfo {
         display: flex;
-        &__user-name {
+        &__userName {
           color: #333333;
           font-size: 16px;
           font-weight: bold;
