create pull request

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -97,6 +97,7 @@
     background-color: #fafafa;
     height: calc(100vh - 100px - 90px);
     padding: 35px 40px 0;
+    overflow: scroll;
     .MessageBox {
       margin-bottom: 46px;
     }
