create pull request

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -22,15 +22,16 @@
       = f.label :name, value: "チャットメンバー", class: "SettingGroupForm__label"
     .SettingGroupForm__rightField
       .ChatMembers
-        %p.ChatMember__name= current_user.name
-        %input{name: "group[user_ids][]", type: "hidden", value: current_user.id}
-      - group.users.each do |user|
-        - if current_user.name != user.name
-          .ChatMember
-            %p.ChatMember__name
-              = user.name
-            .ChatMember__remove.ChatMember__button{"data-user-id": user.id, "data-user-name": user.name} 削除
-            %input{name: "group[user-ids][]", type:"hidden", value: user.id}
+        .ChatMember
+          %p.ChatMember__name= current_user.name
+          %input{name: "group[user_ids][]", type: "hidden", value: current_user.id}
+        - group.users.each do |user|
+          - if current_user.name != user.name
+            .ChatMember
+              %p.ChatMember__name 
+                = user.name
+              .ChatMember__remove.ChatMember__button{"data-user-id": user.id, "data-user-name": user.name} 削除
+              %input{name: "group[user_ids][]", type:"hidden", value: user.id}
   .SettingGroupForm__field
     .SettingGroupForm__leftField
     .SettingGroupForm__rightField
